--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,20 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
+#
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
+#
 server.port=${PORT:8888}
-
+#
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
+app.cors.allowed-origins=*
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+bezkoder.app.jwtSecret=bezKoderSecretKey
+bezkoder.app.jwtExpirationMs=86400000
 # I18n config
 default.language=en
 i18n.resourcebundle.message.source.default=MessageResources
