--- a/src/main/resources/MessageResources.properties
+++ b/src/main/resources/MessageResources.properties
@@ -4,6 +4,7 @@ update.success=Update Success
 delete.success=Delete success
 create.success=Create Success
 account.not.found=account not found
+role.not.found=Role is not found
 account.email.required=email not required
 account.not.verified=account not verified
 account.not.active=Account not active
